nu kan man lägga till personer

--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <script src="script.js"></script>
+
   </head>
   <body>
-    <input type="text" name="todo" value="Att göra"><input type="button" name="name" value="Lägg till todo"><br />
-    <input type="text" name="name" value="namn"><input type="button" name="name" value="Lägg till namn">
+    <form class="" id="addForm" action="#" method="post">
+      <input type="text" name="todo" value="Att göra"><input type="button" id="addTodoButton" value="Lägg till todo"><br />
+      <input type="text" name="person" value="namn"><input type="button" id="addPersonButton" value="Lägg till namn">
+    </form>
+    <div id="names">
 
+    </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
