--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
 
   </head>
   <body>
-    <form class="" id="addForm" action="#" method="post">
-      <input type="text" name="todo" value="Att göra"><input type="button" id="addTodoButton" value="Lägg till todo"><br />
-      <input type="text" name="person" value="namn"><input type="button" id="addPersonButton" value="Lägg till namn">
-    </form>
-    <div id="names">
 
+    <div id="assign">      
+    </div>
+    <div id="form">
+      <h2>Lägg till en todo</h2>
+      <form class="" id="addForm" action="#" method="post">
+        <input type="text" name="todo" value="Att göra"><input type="button" id="addTodoButton" value="Lägg till todo"><br /><br />
+
+         <h2>Lägg till ett namn</h2>
+        <input type="text" name="person" value="namn"><input type="button" id="addPersonButton" value="Lägg till namn">
+      </form>
+    </div>
+    <div id="names">
     </div>
 
     <script src="script.js"></script>
